bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:2: error: value =< is not a member of Int
  if ((temp1<=0) && (temp2>=100) || (temp1>=100) && (temp2=<0)) {
                                                          ^